# musiccollaborativefiltering

./: README.md  pyproject.toml
musiccollaborativefiltering/: data.py  recommender.py  svd.py
